# hyprcloser

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix
src/: main.rs
